--- a/_includes/base.html
+++ b/_includes/base.html
@@ -8,11 +8,11 @@ Rival Type:<br>
 <div class="clearfix" style="width:100%;">
   <div id="col1" style="float:left; margin:0; width:75%;">
     <div>Currently Selected Rivals:</div>
-    <div id="songs" />
+    <div id="songs"></div>
   </div>
   <div id="col2" style="float:left; margin:0; width:25%;">
     <div>Keep:</div>
-    <div id="favs" />
+    <div id="favs"></div>
   </div>
 </div>
 <button class="btn-dark" id="populate_selected">Export</button>
